--- a/css/main.css
+++ b/css/main.css
@@ -1,70 +1,103 @@
-*{
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  --primary-color: #FFBA00;
+  --secundary-color: #FFF1CC;
+  --shadow-color: #CCC;
+  --text-color: #FFF;
+}
+
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  font-family: 'karla', sans-serif;
+  position: relative;
+}
+
+header {
+  background-color: var(--primary-color);
+  height: 70px;
+  text-align: center;
+  line-height: 70px;
+  box-shadow: 0 1px 2px var(--shadow-color);
+}
+
+.header-title {
+  color: black;
+  font-size: 2rem;
+}
+
+main {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 90%;
+  margin: 5vh auto;
+  padding: 30px;
+  box-shadow: 2px 2px 10px var(--shadow-color);
+  gap: 20px;
+}
+
+footer {
+  width: 100;
+  text-align: center;
+  font-weight: 200;
+  font-style: italic;
+  padding: 20px;
+}
+
+@media (max-width: 480px) {
+  header {
+    position: fixed;
+    width: 100%;
+  }
+
+  .header-title {
+    font-size: 1.5rem;
+  }
+
+  main {
     padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
+    margin: 20px 0 0 0;
+    width: 100%;
+    box-shadow: none;
+  }
 
-:root{
-    --primary-color: #FFBA00;
-    --secundary-color: #FFF1CC;
-    --shadow-color: #CCC;
-    --text-color: #FFF;
-}
+  .records,
+  .records-atrasada {
+    border-spacing: 5px;
+  }
 
-body{
-    min-height: 100vh;
+  .records thead {
+    display: none;
+  }
+
+  .records tr {
+    box-shadow: 0 1px 3px var(--shadow-color);
+  }
+
+  .records td:not(:first-child) {
     display: flex;
-    flex-direction: column;
-    font-family: 'karla', sans-serif;
-    position:relative;
-}
+    justify-content: space-between;
+    padding: 0 20px;
+  }
 
-header{
-    background-color: var(--primary-color);
-    height: 70px;
-    text-align: center;
-    line-height: 70px;
-    box-shadow: 0 1px 2px var(--shadow-color);
-}
+  .records td {
+    margin: 10px 0;
+  }
 
-.header-title{
-    color: black;
-    font-size: 2rem;
-}
+  .records tr:hover {
+    background-color: inherit;
+  }
 
-main{
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    width: 90%;
-    margin: 5vh auto;
-    padding: 30px;
-    box-shadow: 2px 2px 10px var(--shadow-color);
-    gap: 20px;
-}
-
-footer{
-    width:100;
-    text-align: center;
-    font-weight: 200;
-    font-style: italic;
-    padding: 20px;
-}
-
-@media (max-width:480px){
-    header{
-        position:fixed;
-        width:100%;
-    }
-    .header-title{
-        font-size: 1.5rem;
-    }
-
-    main{
-        padding: 0;
-        margin: 20px 0 0 0;
-        width:100%;
-        box-shadow: none;
-    }
+  .records-atrasada {
+    background-color: #ffcccc;
+    /* ou qualquer outra cor vermelha que preferir */
+  }
 }
