--- a/css/button.css
+++ b/css/button.css
@@ -1,12 +1,13 @@
 .button{
+    position: relative;
     border-style: none;
-    height: 40px;
+    height: 45px;
     padding: 6px 12px;
     background-color: black;
     color: white;
     font-size: 1rem;
     cursor: pointer;
-    transition: box-shadow .6s ease;
+    transition: box-shadow .9s ease;
 }
 
 .button.blue{
@@ -26,7 +27,7 @@ button.pur{
 }
 
 .button:hover{
-    box-shadow: inset 200px 0 0 #00000055;
+    box-shadow: inset 230px 0 0 #00000055;
 }
 
 @media(max-width:480px){
