--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,7 @@ body {
   flex-direction: column;
   font-family: 'karla', sans-serif;
   position: relative;
+  
 }
 
 header {
@@ -42,6 +43,7 @@ main {
   padding: 30px;
   box-shadow: 2px 2px 10px var(--shadow-color);
   gap: 20px;
+  
 }
 
 footer {
@@ -50,6 +52,33 @@ footer {
   font-weight: 200;
   font-style: italic;
   padding: 20px;
+  
+}
+
+#searchInput{
+  width: 100%;
+  height: 40px;
+  outline-style: none;
+  border-style: none;
+  box-shadow: 0 0 2px black;
+  padding: 0 10px;
+  font-size:1rem;
+}
+
+#searchInput:focus{
+    border: 2px solid var(--primary-color);
+    box-shadow: 0 0 3px var(--primary-color);
+}
+
+.header-controls {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  width:100%
+}
+
+#cadastrarEMH {
+  flex-shrink: 0; /* Evita que o botão encolha */
 }
 
 @media (max-width: 480px) {
