--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,7 @@ body {
   flex-direction: column;
   font-family: 'karla', sans-serif;
   position: relative;
-  
+
 }
 
 header {
@@ -43,7 +43,7 @@ main {
   padding: 30px;
   box-shadow: 2px 2px 10px var(--shadow-color);
   gap: 20px;
-  
+
 }
 
 footer {
@@ -52,33 +52,51 @@ footer {
   font-weight: 200;
   font-style: italic;
   padding: 20px;
-  
+
 }
 
-#searchInput{
+#descricao-sistema {
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
+  width: 100;
+  text-align: center;
+  font-weight:normal;
+  font-style:italic;
+  font-size: 20px;
+  margin-bottom: 0px;
+}
+
+#searchInput {
   width: 100%;
   height: 40px;
   outline-style: none;
   border-style: none;
   box-shadow: 0 0 2px black;
   padding: 0 10px;
-  font-size:1rem;
+  font-size: 1rem;
 }
 
-#searchInput:focus{
-    border: 2px solid var(--primary-color);
-    box-shadow: 0 0 3px var(--primary-color);
+#searchInput:focus {
+  border: 2px solid var(--primary-color);
+  box-shadow: 0 0 3px var(--primary-color);
 }
 
 .header-controls {
   display: flex;
   align-items: center;
   gap: 20px;
-  width:100%
+  width: 100%
 }
 
 #cadastrarEMH {
-  flex-shrink: 0; /* Evita que o botão encolha */
+  flex-shrink: 0;
+  /* Evita que o botão encolha */
+}
+
+
+.records tr.hidden {
+  display: none;
 }
 
 @media (max-width: 480px) {
