--- a/css/main.css
+++ b/css/main.css
@@ -21,14 +21,20 @@ body {
 }
 
 header {
+  display: flex;
   background-color: var(--primary-color);
-  height: 70px;
-  text-align: center;
-  line-height: 70px;
+  height: 100%;
+  justify-content: center;
+  padding: 10px;
   box-shadow: 0 1px 2px var(--shadow-color);
 }
 
 .header-title {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+  line-height: 50px;
   color: black;
   font-size: 2rem;
 }
@@ -38,8 +44,8 @@ main {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  width: 90%;
-  margin: 5vh auto;
+  width: 95%;
+  margin: auto auto;
   padding: 30px;
   box-shadow: 2px 2px 10px var(--shadow-color);
   gap: 20px;
@@ -58,7 +64,7 @@ footer {
 #descricao-sistema {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  padding: 20px;
   width: 100;
   text-align: center;
   font-weight:normal;
@@ -101,12 +107,13 @@ footer {
 
 @media (max-width: 480px) {
   header {
-    position: fixed;
-    width: 100%;
+    text-align: center; /* Centraliza o texto no cabeçalho */
+    height: auto; /* Ajusta a altura conforme necessário para centralizar verticalmente */
   }
 
   .header-title {
     font-size: 1.5rem;
+    line-height: 40px;
   }
 
   main {
@@ -127,12 +134,14 @@ footer {
 
   .records tr {
     box-shadow: 0 1px 3px var(--shadow-color);
+    
   }
 
-  .records td:not(:first-child) {
+  .records td {
     display: flex;
     justify-content: space-between;
     padding: 0 20px;
+    
   }
 
   .records td {
