--- a/css/modal.css
+++ b/css/modal.css
@@ -18,28 +18,31 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  width: 50vw;
-  margin: 12vh auto;
-  padding-bottom: 20px;
+  width: 50%; /* Ajuste a largura conforme necessário */
+  max-width: auto; /* Define uma largura máxima */
+  margin: 5vh auto; /* Ajusta a margem para centralizar verticalmente */
+  padding: 20px;
   background-color: white;
   box-shadow: 1px 1px 10px black;
 }
 
 .modal-header {
-  display: flex;
+  
   position: relative;
   justify-content: center;
-  height: 40px;
-  line-height: 40px;
+  align-items: center;
+  height: 100%;
   font-size: 1rem;
 }
 
 .modal-close {
-  position: absolute;
   right: 0;
-  display: block;
-  width: 40px;
-  height: 40px;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content:center;
+  width: 45px;
+  height: 100%;
   text-align: center;
   user-select: none;
   cursor: pointer;
@@ -105,10 +108,15 @@
     top: 0;
   }
 
+  .modal-close{
+    position: absolute;
+  }
+
   .modal-content {
     margin: 0;
     width: 100%;
-    position: fixed;
+    height: 100%;
+    
   }
 
   .modal-field {
