--- a/css/login.css
+++ b/css/login.css
@@ -35,12 +35,10 @@ body{
     text-align:center;
     flex-direction: column;
     align-items: center;
-    background-image: url("/static/HRU.png");
-    background-size: cover;
+    background: url("/static/HRU.png");
+    background-size:auto;
     background-position:right;
-    border-radius: 8px;
-    
-    
+    border-radius: 8px;   
 }
 
 .form-box h2{
@@ -59,8 +57,11 @@ body{
 }
 
 .form-box .form-content{
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    padding: 35px;
+    padding: 20px;
+    align-items: center;
 }
 
 form .input-field{
@@ -68,6 +69,11 @@ form .input-field{
     width: 100%;
     margin-top: 20px;
     position: relative;
+}
+
+img{
+    width: 120px;
+    
 }
 
 
